vpc/vpc.tf
##==========================
#vpc.tf
##==========================

resource "aws_vpc" "myvpc"{
    cidr_block  = var.vpc_cidr
    instance_tenancy  = "default"
    enable_dns_support  = true
    enable_dns_hostnames  = true
    tags = {
        Name = "${var.project}-myvpc-${var.env}"
        project  = var.project
        env  = var.env
    }
}

##=============================================
###subnets
##=============================================

resource "aws_subnet" "public1" {
    vpc_id  = aws_vpc.myvpc.id
    cidr_block  = cidrsubnet(var.vpc_cidr, "3",0)
    availability_zone  = data.aws_availability_zones.available_AZ.names[0]
    map_public_ip_on_launch  = true
    tags  = {
        Name  = "${var.project}-public1-${var.env}"
        project  = var.project
        env  = var.env

    }

}

resource "aws_subnet" "public2" {
    vpc_id  = aws_vpc.myvpc.id
    cidr_block  = cidrsubnet(var.vpc_cidr, "3",1)
    availability_zone  = data.aws_availability_zones.available_AZ.names[1]
    map_public_ip_on_launch  = true
    tags  = {
        Name  = "${var.project}-public2-${var.env}"
        project  = var.project
        env  = var.env

    }

}

resource "aws_subnet" "public3" {
    vpc_id  = aws_vpc.myvpc.id
    cidr_block  = cidrsubnet(var.vpc_cidr, "3",2)
    availability_zone  = data.aws_availability_zones.available_AZ.names[2]
    map_public_ip_on_launch  = true
    tags  = {
        Name  = "${var.project}-public3-${var.env}"
        project  = var.project
        env  = var.env

    }

}

resource "aws_subnet" "private1" {
    vpc_id  = aws_vpc.myvpc.id
    cidr_block  = cidrsubnet(var.vpc_cidr, "3",3)
    availability_zone  = data.aws_availability_zones.available_AZ.names[0]
    map_public_ip_on_launch  = false
    tags  = {
        Name  = "${var.project}-private1-${var.env}"
        project  = var.project
        env  = var.env

    }

}

resource "aws_subnet" "private2" {
    vpc_id  = aws_vpc.myvpc.id
    cidr_block  = cidrsubnet(var.vpc_cidr, "3",4)
    availability_zone  = data.aws_availability_zones.available_AZ.names[1]
    map_public_ip_on_launch  = false
    tags  = {
        Name  = "${var.project}-private2-${var.env}"
        project  = var.project
        env  = var.env

    }

}

resource "aws_subnet" "private3" {
    vpc_id  = aws_vpc.myvpc.id
    cidr_block  = cidrsubnet(var.vpc_cidr, "3",5)
    availability_zone  = data.aws_availability_zones.available_AZ.names[2]
    map_public_ip_on_launch  = false
    tags  = {
        Name  = "${var.project}-private3-${var.env}"
        project  = var.project
        env  = var.env

    }

}

##========================================
###Route table
##========================================


resource "aws_route_table" "public_rtb" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name = "${var.project}-public_rtb-${var.env}"
    project = var.project
    env = var.env
  }
}


resource "aws_route_table" "private_rtb" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
   }
    tags = {
        Name = "${var.project}-private_rtb-${var.env}"
        project = var.project
        env = var.env
    }
  }


##======================================
###Internet gateway
##======================================

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id

  tags = {
    Name = "${var.project}-igw-${var.env}"
    project = var.project
    env = var.env
  }
}


##====================================
###Elastic IP
##====================================

resource "aws_eip" "elastic_ip" {

  vpc      = true
  tags = {
      Name = "${var.project}-elastic_ip-${var.env}"
    project = var.project
    env = var.env
  }
}


##===========================================
###Nat-gatway
##===========================================

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.elastic_ip.id
  subnet_id     = aws_subnet.public1.id

  tags = {
   Name = "${var.project}-nat-${var.env}"
    project = var.project
    env = var.env
  }

  depends_on = [aws_internet_gateway.igw]
}


##====================================================
###Route table association
##====================================================

resource "aws_route_table_association" "public1" {
  subnet_id      = aws_subnet.public1.id
  route_table_id = aws_route_table.public_rtb.id
}

resource "aws_route_table_association" "public2" {
  subnet_id      = aws_subnet.public2.id
  route_table_id = aws_route_table.public_rtb.id
}


resource "aws_route_table_association" "public3" {
  subnet_id      = aws_subnet.public3.id
  route_table_id = aws_route_table.public_rtb.id
}

resource "aws_route_table_association" "private1" {
  subnet_id      = aws_subnet.private1.id
  route_table_id = aws_route_table.private_rtb.id
}

resource "aws_route_table_association" "private2" {
  subnet_id      = aws_subnet.private2.id
  route_table_id = aws_route_table.private_rtb.id
}

resource "aws_route_table_association" "private3" {
  subnet_id      = aws_subnet.private3.id
  route_table_id = aws_route_table.private_rtb.id
}
